# concrete

./: README.md
src/: CMakeLists.txt  partitions.csv  sdkconfig.old
src/components/flatbuffers/: CMakeLists.txt
src/main/: CMakeLists.txt  adc.c  adc.h  buttons.cpp  buttons.hpp  chime.pcm  conf.fbs  conf_generated.h  desert.pcm  lcd.cpp  lcd.hpp  main.cpp  partition.c  partition.cpp  partition.hpp  virt_sensor.hpp
